components/TabbedPanel/style.module.css
.tabbed-panel {
    display: flex;
    flex-direction: column;
    overflow: auto;
}

.tabs {
    display: flex;
    gap: 0.5rem;
    background-color: var(--base-color-tertiary);
    padding: 0.5rem;
    padding-bottom: 0;
    border-bottom: 1px solid var(--divider);
}

.tab-list {
    display: flex;
    gap: 0.5rem;
}

.tab {
    display: flex;
    align-items: center;
    transition: background-color var(--fade), border-color var(--fade);
    background-clip: padding-box;

    border-top-left-radius: var(--corner-radius);
    border-top-right-radius: var(--corner-radius);
    border: 1px solid transparent;
    margin-bottom: -1px;

    &:hover:not(.disabled) {
        background-color: var(--toggle-hover);
    }

    &.disabled .tab-button {
        color: var(--interactive-muted);
        cursor: not-allowed;
    }

    &.active-tab {
        background-color: var(--base-color-primary);
        border: 1px solid var(--divider);
        border-bottom-color: var(--base-color-primary);
    }
}

.tab-button {
    composes: button-reset from '../../css/shared.module.css';
    font-size: 1rem;
    line-height: 1.75rem;
    color: inherit;
    padding: 0.325rem 0.75rem;
    cursor: pointer;

    &:focus-visible {
        outline: 2px solid var(--text);
        outline-offset: -2px;
    }
}

.tab-actions {
    display: flex;
    align-items: center;
    margin-left: -0.5rem;
    padding-right: 0.5rem;
}

.auxiliary-items {
    display: flex;
    align-items: center;
    margin-right: auto;
    padding-bottom: 0.5rem;
}

.panel {
    flex: 1 1 0;
    display: flex;
    overflow: auto;
}

